
3.93  2013-04-04
  - Improved documentation.

3.92  2013-04-03
  - Added monotonic clock support to make Mojolicious more resilient to time
    jumps.
  - Added steady_time function to Mojo::Util.
  - Removed deprecated namespace method from Mojolicious::Routes.
  - Removed deprecated base_tag helper.
  - Improved WebSocket send method to stringify objects. (jberger)
  - Improved version command to show required versions of optional
    dependencies.
  - Improved documentation.
  - Improved tests.
  - Fixed RFC 6901 compliance of Mojo::JSON::Pointer. (jberger, sri)
  - Fixed a few small Unicode bugs in get command.

3.91  2013-03-17
  - Improved bad charset handling in Mojo::DOM::HTML.
  - Improved documentation.
  - Improved tests.
  - Fixed HTTPS proxy support for blocking requests in Mojo::UserAgent.
  - Fixed support for RFC 2817 in Mojo::Message::Request.
  - Fixed whitespace bug in Mojo::DOM::HTML.
  - Fixed proxy detection bug in get command.

3.90  2013-03-14
  - Added direct array access for parsed parameters to Mojo::Parameters.
  - Added direct array access for path parts to Mojo::Path.
  - Improved dumper helper to sort hash keys.
  - Improved documentation.
  - Improved tests.
  - Fixed bug in Mojo::Headers that prevented multiline headers from being
    parsed correctly.
  - Fixed multiline header support in hash representation of Mojo::Headers.
  - Fixed cloning bug in Mojo::Headers.

3.89  2013-03-04
  - Improved documentation.
  - Improved tests.
  - Fixed installable scripts to not "use lib", which sadly breaks updated
    dual-life modules. (jberger, sri)
  - Fixed bug preventing delayed normalization for reused Mojo::Path objects.
  - Fixed path matching bug in Mojo::Path.

3.88  2013-03-03
  - Improved Mojo::Path to delay normalization as long as possible.
  - Improved Mojo::Path performance.
  - Improved documentation.
  - Improved tests.
  - Fixed small domain detection bug in Mojo::UserAgent::CookieJar.

3.87  2013-02-23