@@ -63,7 +63,7 @@ post '/echo' => sub {
   ok !$ua->need_proxy('dummy.mojolicio.us'), 'no proxy needed';
   ok $ua->need_proxy('icio.us'),   'proxy needed';
   ok $ua->need_proxy('localhost'), 'proxy needed';
-  $ENV{HTTP_PROXY} = $ENV{HTTPS_PROXY} = $ENV{NO_PROXY} = undef;
+  ($ENV{HTTP_PROXY}, $ENV{HTTPS_PROXY}, $ENV{NO_PROXY}) = ();
   local $ENV{http_proxy}  = 'proxy.kraih.com';
   local $ENV{https_proxy} = 'tunnel.kraih.com';
   local $ENV{no_proxy}    = 'localhost,localdomain,foo.com,kraih.com';
